# rag-service

./: .dockerignore  .env.example  .gitignore  API_USAGE.md  DEVELOPER_ONBOARDING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_jobs_table.py
scripts/: README.md  start_worker.py  test_all_endpoints.py
src/: __init__.py
src/agent/: __init__.py  executor.py  memory.py  planner.py  tools.py
src/api/: __init__.py  app.py  dependencies.py  error_handlers.py  routes.py
src/api/routes/: chat.py  documents.py  health.py  jobs.py  sessions.py  tenants.py
src/core/: __init__.py  config.py
src/db/: __init__.py  base.py  models.py  session.py
src/ingestion/: __init__.py  chunker.py  embedder.py  file_detector.py  router.py
src/ingestion/processors/: __init__.py  audio_processor.py  base.py  image_processor.py  text_processor.py
src/middleware/: __init__.py  rate_limit.py  tenant.py
src/models/: analytics.py  job.py  schemas.py  session.py  tenant.py
src/retrieval/: __init__.py  bm25_index.py  generator.py  hybrid_retriever.py  vector_store.py
src/services/: __init__.py  auth_service.py  cache_service.py  document_service.py  job_service.py  quota_service.py  session_service.py  tenant_service.py
src/worker/: __init__.py  tasks.py
src/workers/: document_worker.py  queue.py
tests/: __init__.py  conftest.py
tests/api/: test_documents_routes.py  test_tenants_routes.py
tests/integration/: test_multi_tenancy.py
tests/unit/: __init__.py  test_auth_service.py  test_cache_service.py  test_job_service.py  test_quota_service.py  test_tenant_service.py
